--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,42 +7,44 @@ services:
   web:
     # コンテナ名
     image: nginx:stable-alpine
-    container_name: "web"
+    container_name: web
     # コンテナの作成に使用するDockerfileのパス
     #build:
     #  dockerfile: "./container/web/Dockerfile"
     # ホスト側のポート:コンテナ側のポートを指定
     ports:
-      - "8089:80"
+      - 8089:80
     # src配下のファイルをコンテナ内の~/va/www/html配下に配置
     volumes:
-      - "./html:/var/www/html"
-      - "./nginx_config/default.conf:/etc/nginx/conf.d/default.conf"
+      - ./html:/var/www/html
+      - ./nginx_config/default.conf:/etc/nginx/conf.d/default.conf
 
   # PHPサーバー
   php:
     # コンテナ名
-    container_name: "php"
+    container_name: php
     # コンテナの作成に使用するDockerfileのパス
+    ports:
+      - 9000:9000
     build:
-      dockerfile: "docker_php"
+      dockerfile: docker_php
     # srcディレクトリ内のファイルをコンテナ内の~/var/www/html配下にマウント
     volumes:
-      - "./html:/var/www/html"
-      - "./php_config/php.ini:/usr/local/etc/php/php.ini"
+      - ./html:/var/www/html
+      - ./php_config/php.ini:/usr/local/etc/php/php.ini
 
   # DBサーバー
   db:
     # コンテナ名
     image: mysql:8.0
-    container_name: "db"
+    container_name: db
     # コンテナの作成に使用するDockerfileのパス
     #build:
     #  dockerfile: "./container/db/Dockerfile"
     # platform: linux/x86_64 #M1Macはこれを追加しないと動かない
     # ホスト側のポート:コンテナ側のポートを指定
     ports:
-      - "3306:3306"
+      - 3306:3306
     # 環境変数の指定
     environment:
       - MYSQL_ROOT_PASSWORD=password
@@ -51,5 +53,5 @@ services:
       - MYSQL_PASSWORD=password
     # srcディレクトリ内のファイルをコンテナ内の~/var/www/html配下にマウント
     volumes:
-      - "./mysql/data:/var/lib/mysql"
-      - "./mysql_config/my.cnf:/etc/my.cnf"
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql_config/my.cnf:/etc/my.cnf
