--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 # docker-composeのバージョン
 version: "3.1"
-
 # コンテナ定義
 services:
   # webサーバー
@@ -19,7 +18,8 @@ services:
     volumes:
       - ./html:/var/www/html
       - ./nginx_config/default.conf:/etc/nginx/conf.d/default.conf
-
+    networks:
+      - sample_default
   # PHPサーバー
   php:
     # コンテナ名
@@ -33,7 +33,8 @@ services:
     volumes:
       - ./html:/var/www/html
       - ./php_config/php.ini:/usr/local/etc/php/php.ini
-
+    networks:
+      - sample_default
   # DBサーバー
   mysql:
     # コンテナ名
@@ -54,5 +55,11 @@ services:
       - MYSQL_PASSWORD=password
     # srcディレクトリ内のファイルをコンテナ内の~/var/www/html配下にマウント
     volumes:
-      - ./mysql/data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
       - ./mysql_config/my.cnf:/etc/my.cnf
+    networks:
+      - sample_default
+volumes:
+  mysql_data:
+networks:
+  sample_default:
